--- a/src/login-page/login.css
+++ b/src/login-page/login.css
@@ -3,3 +3,28 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+
+.login {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+
+
+.logo img{
+        width: 100px;
+        height: 100px;
+        margin-bottom: 10px;
+}
+
+.login form{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    margin-top: 20px;
+}
